src/library/LibraryParser.java
/* Generated By:JavaCC: Do not edit this line. LibraryParser.java */
package library;
public class LibraryParser implements LibraryParserConstants {
  private boolean isMale;
  private String name;

  final public void Library() throws ParseException {
    jj_consume_token(LIBRARY);
    jj_consume_token(STRING_WITH_SPACES);
    jj_consume_token(LB);
    jj_consume_token(WEBSITE);
    jj_consume_token(WEBSITE_ENTRY);
    jj_consume_token(BUILDING);
    jj_consume_token(BUILDING_NUMBER);
    jj_consume_token(TIME_OF_YEAR);
    jj_consume_token(STRING_WITH_SPACES);
    jj_consume_token(LB);
    jj_consume_token(START);
    jj_consume_token(DAY);
    jj_consume_token(COMMA);
    jj_consume_token(DAY_OF_MONTH);
    jj_consume_token(MONTH);
    jj_consume_token(YEAR);
    jj_consume_token(END);
    jj_consume_token(DAY);
    jj_consume_token(COMMA);
    jj_consume_token(DAY_OF_MONTH);
    jj_consume_token(MONTH);
    jj_consume_token(YEAR);
    HoursList();
    jj_consume_token(RB);
    jj_consume_token(STAFF);
    jj_consume_token(STRING_WITH_SPACES);
    jj_consume_token(LB);
    jj_consume_token(POSITION);
    jj_consume_token(STRING_WITH_SPACES);
    EmailList();
    jj_consume_token(TYPE);
    jj_consume_token(TYPE_VALUE);
    jj_consume_token(RATE);
    jj_consume_token(MONEY);
    jj_consume_token(RB);
    jj_consume_token(BOOKCOLLECTION);
    jj_consume_token(STRING_WITH_SPACES);
    jj_consume_token(LB);
    BookList();
  }

  final public void BookList() throws ParseException {
    label_1:
    while (true) {
      Book();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOK:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
  }

  final public void Book() throws ParseException {
    jj_consume_token(BOOK);
    jj_consume_token(BOOK_ID);
    jj_consume_token(LB);
  }

  final public void EmailList() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EMAIL:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      Email();
    }
  }

  final public void Email() throws ParseException {
    jj_consume_token(EMAIL);
    LocalPart();
    jj_consume_token(AT);
    DomainPart();
  }

  final public void LocalPart() throws ParseException {
    Part();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(DOT);
      Part();
    }
  }

  final public void DomainPart() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOK_ID:
    case PART:
      Part();
      break;
    case PART_WITH_HYPHEN:
      jj_consume_token(PART_WITH_HYPHEN);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(DOT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOK_ID:
      case PART:
        Part();
        break;
      case PART_WITH_HYPHEN:
        jj_consume_token(PART_WITH_HYPHEN);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Part() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PART:
      jj_consume_token(PART);
      break;
    case BOOK_ID:
      jj_consume_token(BOOK_ID);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DayList() throws ParseException {
    jj_consume_token(DAY_OF_WEEK);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      jj_consume_token(DAY_OF_WEEK);
    }
  }

  final public void HoursList() throws ParseException {
    label_6:
    while (true) {
      jj_consume_token(HOURS);
      DayList();
      jj_consume_token(LP);
      TimePeriod();
      jj_consume_token(RP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HOURS:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
    }
  }

  final public void TimePeriod() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIME:
      jj_consume_token(TIME);
      jj_consume_token(AM_PM);
      jj_consume_token(TO);
      jj_consume_token(TIME);
      jj_consume_token(AM_PM);
      break;
    case CLOSED:
      jj_consume_token(CLOSED);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  /** Generated Token Manager. */
  public LibraryParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40000000,0x400000,0x0,0x0,0x0,0x0,0x0,0x0,0x10000,0xa0000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x80,0xe0000,0x80,0xe0000,0x60000,0x40,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public LibraryParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public LibraryParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LibraryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public LibraryParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new LibraryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public LibraryParser(LibraryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LibraryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[52];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 52; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
